--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@ Ký(h)ri(jk)e(kv.jkh.ixgh!ivHG'g) e(f)lé(ixgi)i(g)son.(h.) (::) Ký(hvGF)ri(gf)
 
 \section*{Graduale}
 
-\chant{(c3) TOL(egf)LI(f)TE(f) *() por(hfg/hvFEge/fg)tas,(f) (;) prín(hf/h!ij)ci(hvGF)pes,(gxfe/gvFE) (,) ve(ed/fef)stras:(fd/ef!hvhvFE/f!gwh/ihh!fgf) (:) et(hh) e(h)le(hi)vá(ih/hf)mi(f)ni(f) (,) por(hf!gwh/if/ij~)tae(hf) ae(hhf)ter(fe~)ná(f!hhh)les:(hf!gwh!iv//hi/jhh/iih) (:) et(hh) in(h)tro(h)í(hg/hi!jvHGhhg,ih/ivHF)bit(fhFEfhhf//hvhvGFhe/ed) (:) Rex(d!efhvGFgef) gló(hf)ri(hi)ae.(ih/ijIH,jh/jkIGhvFE//f!gwhiv//h!ij,ijijHF//gwhf) <sp>V/</sp>.(::) Quis(f) a(h)scén(hi)det(i) (,) in(i) mon(i)tem(i) Dó(ih/ij!kvJH)mi(hi/jij)ni?(jkvJH//jh/ji//kvJIkvJI) (:) aut(i) quis(ki!jw!kvJI) sta(i)bit(i) (;) in(i) lo(i)co(i) sanc(i)to(ij) e(jhjvIHhf//hhfhv//hhhf,hi!jvIHif)jus?(f) (:) In(hh)no(h)cens(hi) má(ivHGE//fhGEfh,gi!jvHF)ni(f)bus(fhFEfh/hf//hvhvGFhe/ed) (:) et(d!ef/hvGFg) mun(e)do(f) *() cor(hf/hi)de.(ijHGhi,e!fh/hjIHGFgwhf) (::)}{Lift up your gates, O ye princes; and be ye lifted up, O eternal gates : and the King of Glory shall enter in. \rubric{\Vbar. Ps.} Who shall ascend into the mountain of the Lord, or who shall stand in His holy place? The innocent in hands and the clean of heart.}
+\chant{(c3) TOl(egf)li(f)te(f.) *() por(hfghvF'Ege/fg)tas,(f.) (;) prín(hf/hi'j)ci(hvGF)pes,(gxfegvFE.) (,) ve(ed/fef)stras :(fd/ef!hvvF'E//f!gwh/ihh/fgf.) (:) et(hh) e(h)le(hi)vá(ihhf)mi(f)ni(f.) (,) por(h.f!gwh/i_[oh:h]f/ij~)tae(h_f) ae(hhf)ter(fe~)ná(f!hhh)les :(h.f!gwh!iv.hi/jhh/iih.0) (:) et(hh) in(h)tro(h)í(hg/hi!jvHGhhg)(,)(i_[oh:h]h/!ivHF)bit(fhF'Efhhf//hvvGF'heed.0) (:) Rex(de'fhvGFgef) gló(hf)ri(hi)ae.(ih/ijI'H) (,) (jh/jkIG'hvF'E//f!gwh!iv.hi'j) (,) (ijijHF'gwhf.1) (::) <sp>V/</sp>. Quis(f) a(h)scén(hi)det(i.) (,) in(i) mon(i)tem(i) Dó(ih/ij!kvJH)mi(hi/jij)ni?(j_0kvJH'//jh/j_i//kvJIkvJI.) (:) aut(i) quis(k.i!jw!kvJI) sta(i)bit(i.) (;) in(i) lo(i)co(i) san(i)cto(ij) e(j_hjvIH'/!hf//hhfhv.hhh_f)(,)(hi!jvIHjvIHif)jus?(f.) (:) In(hh)no(h)cens(hi) má(ivH'GE//fhGEfh..)(,)(gi!jvHF')ni(f)bus(fhF'Efhhf//hvvGF'heed.0) (:) et(de'fhvGF'g) mun(e)do(f) *() cor(hf/h_i)de.(i_[uh:l]jH'Ghi..) (,) (ef'hh'jIH'GF'gwhf.1) (::)}{Lift up your gates, O ye princes; and be ye lifted up, O eternal gates : and the King of Glory shall enter in. \rubric{\Vbar. Ps.} Who shall ascend into the mountain of the Lord, or who shall stand in His holy place? The innocent in hands and the clean of heart.}
 
 \section*{Alleluia}
 
